# googleads-admob-api-samples

./: pyproject.toml
.github/workflows/: admob_report.yaml
python/: README.md
python/v1/: admob_utils.py  generate_campaign_report.py  generate_mediation_report.py  generate_network_report.py  token.pickle
python/v1/secrets/: client_secret_382747438221-ecbaeiu3nc20hnclcqcu2ueo96t2c2o8.apps.googleusercontent.com.json
