[tool.poetry]
name = "admob"
version = "0.1.0"
description = ""
authors = ["Leo7654 <leo.lab001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.118.0"
google-auth-oauthlib = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
